--- a/gb/16/4/6/n7526704.md
+++ b/gb/16/4/6/n7526704.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rrychn331/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rrychn331/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rrychn331/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rrychn331/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rrychn331/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rrychn331/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rrychn331/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rrychn331/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rrychn331/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rrychn331/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rrychn331/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rrychn331/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rrychn331/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rrychn331/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rrychn331/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rrychn331/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/rrychn331/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/rrychn331/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/rrychn331/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/rrychn331/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rrychn331/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/rrychn331/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rrychn331/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rrychn331/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“小男孩乐团”第七支MV  米非挑梁演独角戏</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/04/1604060842411487-600x400.jpg" />
 <h6>台湾“小男孩乐团”新歌《最爱雨天》MV画面，图为成员米非。（索尼音乐提供）
 </h6>
 <hr>
-	<p>【大纪元2016年04月06日讯】台湾“<ahref="https://github.com/rrychn331/djy/blob/master/gb/tag/%E5%B0%8F%E7%94%B7%E5%AD%A9%E4%B9%90%E5%9B%A2.md#1">小男孩乐团</a>”（MECBand）去年加盟索尼音乐，发行首张创作大碟《Everything》广获好评，成为华语乐坛中一支既清新又创作力丰沛的乐团，顺利打响知名度。日前这支四人乐团再推出第七波主打歌《<ahref="https://github.com/rrychn331/djy/blob/master/gb/tag/%E6%9C%80%E7%88%B1%E9%9B%A8%E5%A4%A9.md#1">最爱雨天</a>》MV（<ahref="https://www.youtube.com/watch?v=GfzAR-OSfZk ">点听</a>），和粉丝们一同分享雨天的心情，再度引起网路热议。</p>
-<p>其中一幕，团员<ahref="https://github.com/rrychn331/djy/blob/master/gb/tag/%E7%B1%B3%E9%9D%9E.md#1">米非</a>在8度低温的大雨中，狂奔在净白的沙滩上，当导演一喊卡，10多名工作人员立刻抱着暖暖包和棉被一拥而上，浪漫唯美的画面镜头外却是一阵手忙脚乱，米非还因此发高烧3天无法出门，自嘲是“地表最冷艳女星”。</p>
-<figure id="attachment_7526781" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/04/1604060842371487.jpg"><img class=" wp-image-7526781" title="" src="https://i.epochtimes.com/assets/uploads/2016/04/1604060842371487-600x400.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">台湾“<ahref="https://github.com/rrychn331/djy/blob/master/gb/tag/%E5%B0%8F%E7%94%B7%E5%AD%A9%E4%B9%90%E5%9B%A2.md#1">小男孩乐团</a>”新歌《<ahref="https://github.com/rrychn331/djy/blob/master/gb/tag/%E6%9C%80%E7%88%B1%E9%9B%A8%E5%A4%A9.md#1">最爱雨天</a>》MV画面，图为成员<ahref="https://github.com/rrychn331/djy/blob/master/gb/tag/%E7%B1%B3%E9%9D%9E.md#1">米非</a>。（索尼音乐提供）</figcaption></figure>
+	<p>【大纪元2016年04月06日讯】台湾“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B0%8F%E7%94%B7%E5%AD%A9%E4%B9%90%E5%9B%A2.md#1">小男孩乐团</a>”（MECBand）去年加盟索尼音乐，发行首张创作大碟《Everything》广获好评，成为华语乐坛中一支既清新又创作力丰沛的乐团，顺利打响知名度。日前这支四人乐团再推出第七波主打歌《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%9C%80%E7%88%B1%E9%9B%A8%E5%A4%A9.md#1">最爱雨天</a>》MV<ahref="https://www.youtube.com/watch?v=GfzAR-OSfZk ">点听</a>），和粉丝们一同分享雨天的心情，再度引起网路热议。</p>
+<p>其中一幕，团员<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%B1%B3%E9%9D%9E.md#1">米非</a>在8度低温的大雨中，狂奔在净白的沙滩上，当导演一喊卡，10多名工作人员立刻抱着暖暖包和棉被一拥而上，浪漫唯美的画面镜头外却是一阵手忙脚乱，米非还因此发高烧3天无法出门，自嘲是“地表最冷艳女星”。</p>
+<figure id="attachment_7526781" aria-describedby="caption-attachment-7526781" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/04/1604060842371487.jpg"><img class=" wp-image-7526781" title="" src="https://i.epochtimes.com/assets/uploads/2016/04/1604060842371487-600x400.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-7526781" class="wp-caption-text">台湾“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B0%8F%E7%94%B7%E5%AD%A9%E4%B9%90%E5%9B%A2.md#1">小男孩乐团</a>”新歌《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%9C%80%E7%88%B1%E9%9B%A8%E5%A4%A9.md#1">最爱雨天</a>》MV画面，图为成员<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%B1%B3%E9%9D%9E.md#1">米非</a>。（索尼音乐提供）</figcaption></figure>
 <p>《最爱雨天》歌词乍看之下，是描述情人间的爱情故事，看了MV后才知道其实是团长昌哥对过世父亲的回忆，他发现“雨是最清澈的隔绝，亦是最忘情地宣泄”，因此有感而发写下该曲，并透过MV让歌迷们感受这首用情至深的歌曲。</p>
 <p>不过许多粉丝很好奇，为何这支MV只有米非一人独挑大梁，其他团员都不见了？小男孩乐团团长昌哥表示，该MV为求深入表达意境，让粉丝也能深入其境，跟着米非一起入戏，与导演讨论后决定由米非一人拍摄，其他团员们则是巧妙地出现在MV里的相簿中，显得创意十足，玩起了大家来找团员的游戏。</p>
-<figure id="attachment_7526786" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/04/1604060842451487.jpg"><img class=" wp-image-7526786" title="" src="https://i.epochtimes.com/assets/uploads/2016/04/1604060842451487-600x400.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">台湾“小男孩乐团”新歌《最爱雨天》MV画面，图为成员米非。（索尼音乐提供）</figcaption></figure>
+<figure id="attachment_7526786" aria-describedby="caption-attachment-7526786" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/04/1604060842451487.jpg"><img class=" wp-image-7526786" title="" src="https://i.epochtimes.com/assets/uploads/2016/04/1604060842451487-600x400.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-7526786" class="wp-caption-text">台湾“小男孩乐团”新歌《最爱雨天》MV画面，图为成员米非。（索尼音乐提供）</figcaption></figure>
 <p>责任编辑：梁梦竹</p>
 <p>&nbsp;</p>
 	
@@ -19,42 +19,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/16/1/2/n4608454.md#1">台群星跨年陪粉丝  A-Lin跨海上海自备舞群</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/23/n12351195.md#1">阎奕格Legacy开唱 喜收男友花束甜蜜告白</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/23/n12351131.md#1">“超犀利趴11”连唱两天 18组歌手团体轮唱</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/23/n12351086.md#1">刘若英忍悲登台数度哽咽 松口曝92岁父亲过世</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/2/n4608454.md#1">台群星跨年陪粉丝  A-Lin跨海上海自备舞群</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675501.md#1">签唱会工作人员确诊 黄伟晋急快筛 活动喊卡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672629.md#1">受阿奎结婚牵连 “宇宙人”小玉叹过年被逼婚</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671186.md#1">歌手胡海泉做核酸检测 边排队边转呼啦圈</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/14/n10715065.md#1" target="_blank">古玉文：公安局长卧底校长 百名少年惨成右派</a></li><li><a href="https://github.com/rrychn331/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/20/n11397207.md#1" target="_blank">宗教与民主研究院主任：感谢法轮功坚持真理</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/20/n10234497.md#1" target="_blank">林辉：财大气粗的共产国际背后是血腥掠夺</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/11/5/n4566246.md#1" target="_blank">患“不死绝症”大陆女士神奇“重生”</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/13/n12326957.md#1">孟尝君“狡兔三窟”为何绝子绝孙？</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/16/n12335682.md#1">神秘的中国绝代王后（下）</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/16/11/19/n8507459.md#1">世上多少名利客 怎解捂脸支画工？</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/16/n12334982.md#1">【人间云游】苏东坡梦中启前生  萧瑟处悟真理</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/8/6/1/n2138638.md#1">以德感人的王烈</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/23/n12351841.md#1">【重播】川普8.23发布会：血浆疗法治愈率35%</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/22/n12350600.md#1">【新闻看点】美扩大制裁 华为被判“死刑”？</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/24/n12352600.md#1">【拍案惊奇】习要访韩解困？神秘光球照关东</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/22/n12349392.md#1">【十字路口】传金正恩昏迷 中国经济悲观八趋势</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/22/n12349649.md#1">【拍案惊奇】乐山大佛罕见淹脚趾 这事不简单</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/22/n12349555.md#1">【西岸观察】遭四总统家族攻击 川普民调反升</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/21/n12348722.md#1">曾喊话准备入籍台湾 黄秋生返港被劝不宜久留</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/21/n12349209.md#1">迪丽热巴分享独特解压法 自嘲看似脑子不太好</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/23/n12350862.md#1">5566港都首唱 王仁甫携女儿亮相大跳BTS舞蹈</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/21/n12348907.md#1">韩演艺圈15人确诊 Netflix宣布暂停韩剧制作</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/21/n12347560.md#1">BTS盼《Dynamite》带来活力 MV浏览屡创纪录</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/21/n12348323.md#1">【纪元播报】马斯克说金字塔外星人建的 埃及回应</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/23/n12351096.md#1">四川母狗跳入洪水中救回宝宝 感动人心</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/22/n12349911.md#1">南极惊现超百米神秘“冰船” 似有窗户和烟囱</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/5/n12308945.md#1">一只吹风机保养全身！这样吹增强免疫力 改善慢性病</a></li>
-<li><a href="https://github.com/rrychn331/djy/blob/master/gb/20/8/21/n12347602.md#1">常按4穴道让你心情变好 降火气又纾压</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678880.md#1">【新闻大家谈】防疫手段失控 中共危机加剧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/rrychn331/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/rrychn331/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/4/6/n7526704.htm">“小男孩乐团”第七支MV  米非挑梁演独角戏</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/4/6/n7526704.htm">“小男孩乐团”第七支MV  米非挑梁演独角戏</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/rrychn331/djy/blob/master/gb/16/4/6/n7526704.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rrychn331/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rrychn331/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rrychn331/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rrychn331/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rrychn331/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rrychn331/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rrychn331/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rrychn331/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rrychn331/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rrychn331/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rrychn331/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rrychn331/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rrychn331/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rrychn331/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rrychn331/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rrychn331/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rrychn331/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rrychn331/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rrychn331/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rrychn331/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rrychn331/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rrychn331/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rrychn331/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rrychn331/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rrychn331/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/16/4/6/n7526704.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
